<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/frame_layout_shape">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="8"
        android:orientation="vertical">

    <TextView
        android:id="@+id/frame_title"
        android:text="@string/data"
        android:textSize="37sp"
        android:textColor="#FFFFFF"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:hint="@string/task_name"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:hint="@string/phone_number"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/city_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:hint="@string/city_name"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/street_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:hint="@string/street_name"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/street_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:hint="@string/street_number"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/time_limit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:hint="@string/time_limit"
            android:textColor="#ffffff"
            android:singleLine="true"/>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="2"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cancel"
                android:textColor="#ffffff"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:layout_weight="1"
                tools:ignore="NestedWeights"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="7dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/cancel_button_shape"/>

            <Button
                android:id="@+id/confirm_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/confirm"
                android:textColor="#ffffff"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="7dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/confirm_button_shape"/>
            
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</FrameLayout>